WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113356
Fix compile for OS(WIN) != PLATFORM(WIN)
https://bugs.webkit.org/show_bug.cgi?id=113356
Summary
Fix compile for OS(WIN) != PLATFORM(WIN)
James Robinson
Reported
2013-03-26 17:08:43 PDT
Fix compile for OS(WIN) != PLATFORM(WIN)
Attachments
Patch
(1.15 KB, patch)
2013-03-26 17:08 PDT
,
James Robinson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2013-03-26 17:08:58 PDT
Created
attachment 195193
[details]
Patch
James Robinson
Comment 2
2013-03-26 17:10:05 PDT
146932 broke the build for all windows ports that aren't the apple-win port. PLATFORM(WIN) means the apple-win port, not windows the operating system (just as PLATFORM(MAC) means the apple-mac port, not Mac OS X).
James Robinson
Comment 3
2013-03-26 17:11:45 PDT
Committed
r146948
: <
http://trac.webkit.org/changeset/146948
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug