Fix compile for OS(WIN) != PLATFORM(WIN) https://bugs.webkit.org/show_bug.cgi?id=113356

Reviewed by Tim Horton.

* wtf/ProcessID.h:
(WTF::getCurrentProcessID):

Canonical link: https://commits.webkit.org/131693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146948 268f45cc-cd09-0410-ab3c-d52691b4dbfc